# task-manager-api

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-test.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scripts/: give_db_user_permission.sh
taskmanager/: Makefile  manage.py
taskmanager/files/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
taskmanager/files/migrations/: 0001_initial.py  0002_alter_sharedfile_project_alter_sharedfile_task.py  0003_alter_sharedfile_file.py
taskmanager/profiles/: admin.py  apps.py  models.py  permissions.py  schema.py  serializers.py  tests.py  urls.py  views.py
taskmanager/profiles/management/commands/: create_user.py  populate_db.py  rollback_user.py
taskmanager/profiles/migrations/: 0001_initial.py  0002_profile_expo_push_token_alter_profile_image.py
taskmanager/projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
taskmanager/projects/migrations/: 0001_initial.py  0002_project_owner.py  0003_alter_project_options_alter_project_end_date_and_more.py  0004_alter_project_users.py  0005_alter_project_users.py  0006_remove_project_project_start_date_lte_end_date_and_more.py
taskmanager/taskmanager/: .env.dist  __init__.py  asgi.py  celery.py  schema.py  settings.py  urls.py  views.py  wsgi.py
taskmanager/taskmanager/settings/: __init__.py  base.py  local.py  production.py
taskmanager/tasks/: admin.py  apps.py  models.py  permissions.py  schema.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
taskmanager/tasks/management/commands/: send_fcm_notifications.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_task_creator.py  0003_alter_task_creator_alter_task_end_date_and_more.py  0004_task_created_at.py  0005_alter_task_status.py  0006_remove_task_start_date_lte_end_date_and_more.py  0007_task_project.py  0008_comment_mention.py  0009_remove_comment_user_remove_mention_user_and_more.py  0010_alter_comment_creator_alter_mention_mentioned_user.py
