[tool.poetry]
package-mode = false
name = "task-manager-api"
version = "0.1.0"
description = ""
authors = ["berkay krc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.9"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.0"
exponent-server-sdk = "2.0.0"
sentry-sdk = "1.36.0"
celery = {version = "5.3.6", extras = ["redis"]}
django-filter = "23.5"
django-cors-headers = "4.3.1"
psycopg2-binary = "2.9.9"
django-redis = "5.4.0"
pillow = "10.2.0"
django-csp = "3.7"
graphene-django = "3.2.0"
django-graphql-jwt = "0.4.0"
dj-rest-auth = "5.0.2"


[tool.poetry.group.dev.dependencies]
faker = "^33.1.0"
django-debug-toolbar = "^4.4.6"
django-environ = "0.11.2"
ruff = "^0.8.5"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.15.2"}
celery-types = "^0.22.0"

[tool.ruff]
exclude=[
    "migrations",
]
[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]   
mypy_path = "taskmanager"
ignore_missing_imports = true
exclude = 'migrations'

[tool.django-stubs]
django_settings_module = "taskmanager.settings.local"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"